--- a/advanced-html-css/animation/02-pop-up/style.css
+++ b/advanced-html-css/animation/02-pop-up/style.css
@@ -35,10 +35,11 @@ button {
   top: 50%;
   left: 50%;
   transform-origin: center;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -100%);
   pointer-events: none;
   opacity: 0%;
   text-align: center;
+  transition: all .5s ease;
 }
 
 .popup-modal p {
@@ -54,6 +55,8 @@ button {
 }
 
 .popup-modal.show {
+  transform-origin: center;
+  transform: translate(-50%, -50%);
   opacity: 100%;
   pointer-events: all;
 }
