--- a/advanced-html-css/animation/03-dropdown-menu/style.css
+++ b/advanced-html-css/animation/03-dropdown-menu/style.css
@@ -27,6 +27,14 @@ ul.dropdown-menu li:hover {
 
 .visible {
   display: block;
+  transform-origin: top;
+  animation: bounce 1s ease;
+}
+
+@keyframes bounce {
+  0% {transform: scaleY(0)}
+  75% {transform: scaleY(1.1)}
+100% {transform: scaleY(1)}
 }
 
 
